--- a/app/src/main/res/menu/menu_articles.xml
+++ b/app/src/main/res/menu/menu_articles.xml
@@ -14,19 +14,7 @@
   ~    limitations under the License.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<menu xmlns:tools="http://schemas.android.com/tools"
     tools:context="uk.projectchronos.xplorationreader.ArticlesActivity">
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
-    <!-- TODO: remove after -->
-    <item
-        android:id="@+id/action_try_tab"
-        android:orderInCategory="100"
-        android:title="@string/action_try_tab"
-        app:showAsAction="never" />
+
 </menu>
