--- a/app/src/main/res/drawable/tag.xml
+++ b/app/src/main/res/drawable/tag.xml
@@ -17,7 +17,7 @@
     <item android:state_selected="false">
         <shape android:shape="rectangle">
 
-            <solid android:color="#607D8B" />
+            <solid android:color="@color/primary_dark" />
             <corners android:radius="8dp" />
 
         </shape>
@@ -26,7 +26,7 @@
     <item android:state_selected="true">
         <shape android:shape="rectangle">
 
-            <solid android:color="#968800" />
+            <solid android:color="@color/primary" />
             <corners android:radius="4dp" />
 
         </shape>
