--- a/app/src/main/res/layout/card_article.xml
+++ b/app/src/main/res/layout/card_article.xml
@@ -16,12 +16,13 @@
 
 <!--suppress AndroidElementNotAllowed -->
 <com.dexafree.materialList.card.CardLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <android.support.v7.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -31,7 +32,7 @@
         android:layout_marginTop="@dimen/card_vertical_margin"
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground"
-        card_view:cardCornerRadius="@dimen/card_corner_radius">
+        app:cardCornerRadius="@dimen/card_corner_radius">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -88,7 +89,11 @@
             <com.greenfrvr.hashtagview.HashtagView
                 android:id="@+id/keywords_hashtag"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/big_padding"
+                android:layout_marginRight="@dimen/big_padding"
+                app:tagBackground="@drawable/tag"
+                app:tagTextColor="@android:color/white" />
 
             <TextView
                 android:id="@+id/abstract_text_view"
