--- a/app/src/main/res/layout/activity_articles.xml
+++ b/app/src/main/res/layout/activity_articles.xml
@@ -31,8 +31,8 @@
         tools:ignore="UnknownIdInLayout">
 
         <!-- Your content here! -->
-        <com.dexafree.materialList.view.MaterialListView
-            android:id="@+id/material_article_list"
+        <uk.projectchronos.xplorationreader.adapter.RecyclerViewEmptySupport
+            android:id="@+id/article_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="vertical" />
@@ -44,10 +44,10 @@
             android:layout_centerInParent="true"
             android:layout_marginLeft="60dp"
             android:layout_marginRight="60dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            tools:ignore="UseCompoundDrawables">
 
             <ImageView
-                android:id="@+id/imageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
