--- a/app/src/main/res/layout/card_article.xml
+++ b/app/src/main/res/layout/card_article.xml
@@ -14,8 +14,7 @@
   ~    limitations under the License.
   -->
 
-<!--suppress AndroidElementNotAllowed -->
-<com.dexafree.materialList.card.CardLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -23,7 +22,7 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/cardView"
+        android:id="@+id/article_card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/card_vertical_margin"
@@ -109,4 +108,4 @@
 
     </android.support.v7.widget.CardView>
 
-</com.dexafree.materialList.card.CardLayout>
+</LinearLayout>
