--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,10 +15,14 @@
   -->
 
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
+    <!-- Per the Android Design guidelines -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="small_padding">8dp</dimen>
+    <dimen name="big_padding">16dp</dimen>
 
     <!-- Card dimension -->
     <dimen name="card_vertical_margin">4dp</dimen>
+    <dimen name="card_corner_radius">2dp</dimen>
+
 </resources>
