--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,5 +24,7 @@
     <!-- Card dimension -->
     <dimen name="card_vertical_margin">4dp</dimen>
     <dimen name="card_corner_radius">2dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="appbar_padding_top">8dp</dimen>
 
 </resources>
