--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -24,6 +24,7 @@
         <item name="android:windowSharedElementExitTransition">@android:transition/move</item>
 
         <item name="android:navigationBarColor">@color/primary_dark</item>
+        <item name="colorAccent">@color/primary_dark</item>
     </style>
 
 </resources>
