--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,5 @@
     <color name="secondary_text">#737373</color>
     <color name="icons">#FFFFFF</color>
     <color name="divider">#e6e6e6</color>
+    <color name="white">#4057ff</color>
 </resources>
