Introduces new Sections management
Finally the user can add sections with custom names and custom types. The app brings with three default sections: Media (with types Movies, PDF and images), Social (Tweets and Facebook posts), All (all types). The user can add other sections tapping on "Add section" on the menu. After that, a dialog allows him to insert a name and to select types of the just created section.

It also improves folder's project and updates libraries.

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -18,9 +18,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="uk.projectchronos.xplorationreader.MainActivity.ArticleListFragment">
+    tools:context=".fragments.ArticleListFragment">
 
-    <uk.projectchronos.xplorationreader.adapter.RecyclerViewEmptySupport
+    <uk.projectchronos.xplorationreader.views.RecyclerViewEmptySupport
         android:id="@+id/article_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
