--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="uk.projectchronos.xplorationreader.MainActivity">
+    tools:context=".activites.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
