--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -16,7 +16,7 @@
 
 <resources>
 
-    <style name="AppTheme" parent="AppTheme.Base">
+    <style name="AppThemeNoActionBar" parent="AppTheme.BaseNoActionBar">
         <item name="android:windowContentTransitions">true</item>
         <item name="android:windowAllowEnterTransitionOverlap">true</item>
         <item name="android:windowAllowReturnTransitionOverlap">true</item>
@@ -27,4 +27,15 @@
         <item name="colorAccent">@color/primary_dark</item>
     </style>
 
+
+    <style name="AppTheme" parent="AppTheme.Base">
+        <item name="android:windowContentTransitions">true</item>
+        <item name="android:windowAllowEnterTransitionOverlap">true</item>
+        <item name="android:windowAllowReturnTransitionOverlap">true</item>
+        <item name="android:windowSharedElementEnterTransition">@android:transition/move</item>
+        <item name="android:windowSharedElementExitTransition">@android:transition/move</item>
+
+        <item name="android:navigationBarColor">@color/primary_dark</item>
+        <item name="colorAccent">@color/primary_dark</item>
+    </style>
 </resources>
